force-app/main/default/objects/CA_LinhaBoleto__c/CA_LinhaBoleto__c.object-meta.xml
<CustomObject>
    <label>Linha Boleto</label>
    <nameField>
        <displayFormat>LB-{000000000}</displayFormat>
        <label>Linha Boleto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linhas Boleto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>