force-app/main/default/objects/CA_LinhaBoleto__c/fields/CA_Boleto__c.field-meta.xml
<CustomField>
    <fullName>CA_Boleto__c</fullName>
    <label>Boleto</label>
    <referenceTo>CA_Boleto__c</referenceTo>
    <relationshipLabel>Linhas Boleto</relationshipLabel>
    <relationshipName>LinhasBoleto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>