force-app/main/default/objects/CA_LinhaBoleto__c/fields/CA_CodigoOcorrencia__c.field-meta.xml
<CustomField>
    <fullName>CA_CodigoOcorrencia__c</fullName>
    <label>Código Ocorrência</label>
    <length>18</length>
    <type>Text</type>
</CustomField>