force-app/main/default/objects/CA_LinhaBoleto__c/fields/CA_IdExterno__c.field-meta.xml
<CustomField>
    <fullName>CA_IdExterno__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>