force-app/main/default/objects/CA_LinhaBoleto__c/fields/CA_Ocorrencia__c.field-meta.xml
<CustomField>
    <fullName>CA_Ocorrencia__c</fullName>
    <label>Ocorrência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>