force-app/main/default/objects/CA_LinhaBoleto__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ajuste recibo</fullName>
            </value>
            <value>
                <fullName>Cobrança</fullName>
            </value>
            <value>
                <fullName>Concessionária</fullName>
            </value>
            <value>
                <fullName>Conta Prevista/Efetiva</fullName>
            </value>
            <value>
                <fullName>Contrato</fullName>
            </value>
            <value>
                <fullName>Contrato/Seguro</fullName>
            </value>
            <value>
                <fullName>Contrato/Seguro Fiança</fullName>
            </value>
            <value>
                <fullName>Contrato seguro conteúdo</fullName>
            </value>
            <value>
                <fullName>Contrato seguro perda de renda</fullName>
            </value>
            <value>
                <fullName>Conversão</fullName>
            </value>
            <value>
                <fullName>Diferença</fullName>
            </value>
            <value>
                <fullName>Encargo/Integrada</fullName>
            </value>
            <value>
                <fullName>Encargos</fullName>
            </value>
            <value>
                <fullName>Informado</fullName>
            </value>
            <value>
                <fullName>Integração condomínio</fullName>
            </value>
            <value>
                <fullName>IPTU Imóvel</fullName>
            </value>
            <value>
                <fullName>Lançamento locador</fullName>
            </value>
            <value>
                <fullName>Lançamento locatário</fullName>
            </value>
            <value>
                <fullName>Renegociação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>