force-app/main/default/objects/CA_LinhaBoleto__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <label>Referência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>